--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -58,15 +58,15 @@
 
 					<tr>	
 					   <td><%= button_to "Delete", {:controller => :states, :action => :destroy, :id => state.id}, :method => 'delete' %></td>		
-					   <td><%= state.query_date.strftime('%m/%d/%Y') %> </td>
-					   <td><%= state.total_tests %> </td>
-					   <td><%= state.test_dir %> <%= state.test_change %> </td>
-					   <td><%= state.total_cases %> </td>
-					   <td><%= state.case_dir %> <%= state.case_change %> </td>
-					   <td><%= state.hospitalized_cases %> </td>
-					   <td><%= state.hosp_dir %> <%= state.hospitalized_change %> </td>
-					   <td><%= state.confirmed_deaths %> </td>
-					   <td><%= state.death_dir %> <%= state.death_change %> </td>
+					   <td><%= state.query_date.strftime('%m/%d/%Y')%> </td>
+					   <td><%= number_with_delimiter(state.total_tests)%> </td>
+					   <td><%= state.test_dir %><%= number_with_delimiter(state.test_change)%> </td>
+					   <td><%= number_with_delimiter(state.total_cases)%> </td>
+					   <td><%= state.case_dir %><%= number_with_delimiter(state.case_change)%> </td>
+					   <td><%= number_with_delimiter(state.hospitalized_cases)%> </td>
+					   <td><%= state.hosp_dir %><%= number_with_delimiter(state.hospitalized_change)%> </td>
+					   <td><%= number_with_delimiter(state.confirmed_deaths)%> </td>
+					   <td><%= state.death_dir %><%= number_with_delimiter(state.death_change)%> </td>
 
 
 					</tr>
