refactored application.html.erb file to move js clock funtion inside assest pipeline

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,17 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
     
     <title>CTCovid19Tracker</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+
 
 
   </head>
@@ -67,38 +72,7 @@
                                     </div>
                                     <div  id="time" class="time_display"></div>
 <script type="text/javascript">
-function checkTime(i) {
-    if (i < 10) {
-        i = "0" + i;
-    }
-    return i;
-}
-
-function startTime() {
-    var today = new Date();
-    var h = today.getHours();
-    var m = today.getMinutes();
-    var s = today.getSeconds();
-    // add a zero in front of numbers<10
-    m = checkTime(m);
-    s = checkTime(s);
-
-    // Choose either "AM" or "PM" as appropriate
-    var timeOfDay = ( h < 12 ) ? "AM" : "PM";
-
-    // Convert the hours component to 12-hour format if needed
-    h = ( h > 12 ) ? h - 12 : h
-
-    // Convert an hours component of "0" to "12"
-    h = ( h == 0 ) ? 12 : h;
-
-
-    document.getElementById('time').innerHTML = h + ":" + m + ":" + s + " " + timeOfDay;
-    t = setTimeout(function () {
-        startTime()
-    }, 500);
-}
-startTime();
+  startTime();
 </script> 
 
     <br>
