--- a/app/views/counties/index.html.erb
+++ b/app/views/counties/index.html.erb
@@ -56,15 +56,15 @@
         
           <% @counties.map do |county| %>
           <tr>      
-             <td><%= link_to "Delete", destroy_county_path(current_user.id, county.id), :method => 'delete' %></td>
+             <td><%= button_to "Delete", {:controller => :counties, :action => :destroy, :id => county.id}, :method => 'delete' %></td>
              <td><%= county.query_date.strftime('%m/%d/%Y') %> </td>
              <td><%= county.name %> </td>
-             <td><%= county.confirmed_cases %> </td>
-             <td><%= county.case_dir %> <%= county.case_change %> </td>
-             <td><%= county.hospitalizations %> </td>
-             <td><%= county.hosp_dir %> <%= county.hospitalized_change %> </td>
-             <td><%= county.confirmed_deaths %> </td>
-             <td><%= county.death_dir %> <%= county.death_change %> </td>
+             <td><%= number_with_delimiter(county.confirmed_cases) %> </td>
+             <td><%= county.case_dir %> <%= number_with_delimiter(county.case_change) %> </td>
+             <td><%= number_with_delimiter(county.hospitalizations) %> </td>
+             <td><%= county.hosp_dir %> <%= number_with_delimiter(county.hospitalized_change) %> </td>
+             <td><%= number_with_delimiter(county.confirmed_deaths) %> </td>
+             <td><%= county.death_dir %> <%= number_with_delimiter(county.death_change) %> </td>
 
 
           </tr>
