--- a/app/views/towns/new.html.erb
+++ b/app/views/towns/new.html.erb
@@ -24,7 +24,7 @@
   <div><%= label_tag('end_date', "End Date:")%> <%= date_field_tag('end_date') %></div>
   <br>
   
-  <div><%= collection_select :town_lookup_id, TownLookup.all, TownLookup.order(:name), :id, :name, {:prompt => 'Town/None'}, {multiple: true} %>
+  <div><%= collection_select :town_lookup_id, TownLookup.all, TownLookup.order(:name), :id, :name, {:prompt => 'Select Town'}, {multiple: true} %>
   </div>
  
  
@@ -35,5 +35,5 @@
  
 
  
-  <%= submit_tag "Enter Date" %>
+  <%= submit_tag "Submit" %>
 <% end %>
