--- a/app/views/counties/index.html.erb
+++ b/app/views/counties/index.html.erb
@@ -30,6 +30,7 @@
   <% else %>
 
       <p>Here is a list of your COUNTYWIDE COVID-19 data by date</p>
+      <br>
 
       <table >
 
@@ -58,11 +59,11 @@
              <td><%= county.query_date.strftime('%m/%d/%Y') %> </td>
              <td><%= county.name %> </td>
              <td><%= number_with_delimiter(county.confirmed_cases) %> </td>
-             <td><%= county.case_dir %> <%= number_with_delimiter(county.case_change) %> </td>
+             <td><%= county.case_change == 0 ? "**" : county.case_dir %><%= number_with_delimiter(county.case_change) %></td>
              <td><%= number_with_delimiter(county.hospitalizations) %> </td>
-             <td><%= county.hosp_dir %> <%= number_with_delimiter(county.hospitalized_change) %> </td>
+             <td><%= county.hospitalized_change == 0 ? "**" : county.hosp_dir %><%= number_with_delimiter(county.hospitalized_change) %></td>
              <td><%= number_with_delimiter(county.confirmed_deaths) %> </td>
-             <td><%= county.death_dir %> <%= number_with_delimiter(county.death_change) %> </td>
+             <td><%= county.death_change == 0 ? "**" : county.death_dir %><%= number_with_delimiter(county.death_change) %></td>
 
 
           </tr>
@@ -70,7 +71,6 @@
       </table>
 
   <% end %>
-
 <br>
   <%= link_to "Select Additional Dates", new_user_county_path(current_user) %>
   
