--- a/app/views/towns/index.html.erb
+++ b/app/views/towns/index.html.erb
@@ -30,6 +30,7 @@
   <% else %>
 
       <p>Here is a list of your TOWNWIDE COVID-19 data by date</p>
+      <br>
 
       <table >
 
@@ -52,12 +53,12 @@
           <tr>   
              <td><%= button_to "Delete", {:controller => :towns, :action => :destroy, :id => town.id}, :method => 'delete' %></td>   <td> <%= town.query_date.strftime('%m/%d/%Y') %></td>
              <td><%= town.name %> </td>
-             <td><%= number_with_delimiter(town.total_tests) %> </td> 
-             <td><%= town.test_dir %> <%= number_with_delimiter(town.test_change) %> </td>
-             <td><%= number_with_delimiter(town.confirmed_cases) %> </td>
-             <td><%= town.case_dir %> <%= number_with_delimiter(town.case_change) %> </td>
-             <td><%= number_with_delimiter(town.confirmed_deaths) %> </td>
-             <td><%= town.death_dir %> <%= number_with_delimiter(town.death_change)%> </td>
+             <td><%= number_with_delimiter(town.total_tests)%></td> 
+             <td><%= town.test_change == 0 ? "**" : town.test_dir %><%= number_with_delimiter(town.test_change) %></td>
+             <td><%= number_with_delimiter(town.confirmed_cases) %></td>
+             <td><%= town.case_change == 0 ? "**" : town.case_dir %><%= number_with_delimiter(town.case_change) %></td> 
+             <td><%= number_with_delimiter(town.confirmed_deaths) %></td>
+             <td><%= town.death_change == 0 ? "**" : town.death_dir %><%= number_with_delimiter(town.death_change) %></td>
 
 
           </tr>
