--- a/app/views/age_groups/index.html.erb
+++ b/app/views/age_groups/index.html.erb
@@ -30,13 +30,13 @@
 	<% else %>
 
 			<p>Here is a list of your STATEWIDE COVID-19 data by AGE GROUP</p>
-
-			<p>Click on date to drill down on more data take to show page for each instance data by race</p><br>
+			<br>
 
 			<table>
 
 			  <tr>
 
+			  	<th>Delete</th>
 			  	<th>Date</th>
 			  	<th>Age Group</th>
           		<th>Confirmed Cases</th>
@@ -49,8 +49,8 @@
 				
 					<% @age_groups.each do |age_group| %>
 					<tr>
-								
-					   <td> <%= link_to age_group.query_date.strftime('%m/%d/%Y'), user_age_group_path(current_user.id, age_group.id) %></td>
+                       <td><%= button_to "Delete", {:controller => :age_groups, :action => :destroy, :id => age_group.id}, :method => 'delete' %></td>								
+					   <td> <%= age_group.query_date.strftime('%m/%d/%Y') %></td>
 					   <td><%= age_group.age_group %></td>
              		   <td><%= age_group.confirmed_cases %> </td>
 			           <td><%= age_group.case_dir %> <%= age_group.case_change %> </td>
