--- a/app/views/gender_cases/index.html.erb
+++ b/app/views/gender_cases/index.html.erb
@@ -30,13 +30,14 @@
 	<% else %>
 
 			<p>Here is a list of your STATEWIDE COVID-19 data by GENDER</p>
+			<br>
 
-			<p>Click on date to drill down on more data take to show page for each instance data by gender<br>
 
 			<table>
 
 			  <tr>
 
+			  	<th>Delete</th>
 			  	<th>Date</th>
 			  	<th>Gender</th>
           		<th>Confirmed Cases</th>
@@ -49,8 +50,8 @@
 				
 					<% @gender_cases.each do |gender| %>
 					<tr>
-
-					   <td> <%= link_to gender.query_date.strftime('%m/%d/%Y'), user_gender_case_path(current_user.id, gender.id) %></td>
+					   <td><%= button_to "Delete", {:controller => :gender_cases, :action => :destroy, :id => gender.id}, :method => 'delete' %></td>					   
+					   <td> <%= gender.query_date.strftime('%m/%d/%Y')%></td>
 					   <td><%= gender.gender %></td>
              		   <td><%= gender.confirmed_cases %> </td>
 			           <td><%= gender.case_dir %> <%= gender.case_change %> </td>
