--- a/app/views/age_groups/index.html.erb
+++ b/app/views/age_groups/index.html.erb
@@ -52,11 +52,11 @@
                        <td><%= button_to "Delete", {:controller => :age_groups, :action => :destroy, :id => age_group.id}, :method => 'delete' %></td>								
 					   <td> <%= age_group.query_date.strftime('%m/%d/%Y') %></td>
 					   <td><%= age_group.age_group %></td>
-             		   <td><%= age_group.confirmed_cases %> </td>
-			           <td><%= age_group.case_dir %> <%= age_group.case_change %> </td>
-			           <td><%= age_group.confirmed_deaths %> </td>
-			           <td><%= age_group.death_dir %> <%= age_group.death_change %> </td>
+             		   <td><%= number_with_delimiter(age_group.confirmed_cases) %> </td>
 
+			           <td><%= age_group.case_change == 0 ? "**" : age_group.case_dir %><%= number_with_delimiter(age_group.case_change) %> </td>
+			           <td><%= number_with_delimiter(age_group.death_change) %> </td>
+			           <td><%= age_group.death_change == 0 ? "**" : age_group.death_dir %><%= number_with_delimiter(age_group.death_change) %> </td>
 					</tr>
 					<% end %>
 			</table>
