--- a/app/views/gender_cases/index.html.erb
+++ b/app/views/gender_cases/index.html.erb
@@ -53,10 +53,10 @@
 					   <td><%= button_to "Delete", {:controller => :gender_cases, :action => :destroy, :id => gender.id}, :method => 'delete' %></td>					   
 					   <td> <%= gender.query_date.strftime('%m/%d/%Y')%></td>
 					   <td><%= gender.gender %></td>
-             		   <td><%= gender.confirmed_cases %> </td>
-			           <td><%= gender.case_dir %> <%= gender.case_change %> </td>
-			           <td><%= gender.confirmed_deaths %> </td>
-			           <td><%= gender.death_dir %> <%= gender.death_change %> </td>
+             		   <td><%= number_with_delimiter(gender.confirmed_cases) %> </td>
+			           <td><%= gender.case_change == 0 ? "**" : gender.case_dir %><%= number_with_delimiter(gender.case_change) %> </td>
+			           <td><%= number_with_delimiter(gender.confirmed_deaths) %> </td>
+			           <td><%= gender.death_change == 0 ? "**" : gender.death_dir %><%= number_with_delimiter(gender.death_change) %> </td>
 					</tr>
 					<% end %>
 			</table>
