added dropdown feature for ethic_cases and age_groups as well as moved validations from te

--- a/app/assets/stylesheets/ct-covid-tracker.scss
+++ b/app/assets/stylesheets/ct-covid-tracker.scss
@@ -5,6 +5,10 @@
 	color: red;
 }
 
+.notice {
+  color: green;
+}
+
 div#error_explanation li{
 	color: red;
 }
@@ -14,9 +18,6 @@ h1 {
 	font-size: 30px;
 }
 
-p.notice {
-	color: green;
-}
 
 a.link-to-text_color {
 	color: blue;
