--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,8 @@
 <h1><b>Sign up</b></h1><br>
 
+ <p class="info"><%= notice %></p>
+ <p class="alert"><%= alert %></p>
+
  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
