--- a/app/views/age_groups/index.html.erb
+++ b/app/views/age_groups/index.html.erb
@@ -34,6 +34,8 @@
 
 			<table>
 
+        	  <%= button_to "Delete All", {:controller => :age_groups, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure?'} %><br> 				
+
 			  <tr>
 
 			  	<th>Delete</th>
@@ -46,6 +48,7 @@
 					
 
 			  </tr>
+			  <br>
 				
 					<% @age_groups.each do |age_group| %>
 					<tr>
