--- a/app/views/ethnic_cases/index.html.erb
+++ b/app/views/ethnic_cases/index.html.erb
@@ -34,6 +34,8 @@
 
 			<table>
 
+			<%= button_to "Delete All", {:controller => :ethnic_cases, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure?'} %><br>				
+
 			  <tr>
 
 			  	<th>Delete</th>
@@ -47,6 +49,7 @@
 					
 
 			  </tr>
+			  <br>
 				
 					<% @ethnic_cases.each do |c| %>
 
