--- a/app/views/towns/index.html.erb
+++ b/app/views/towns/index.html.erb
@@ -34,6 +34,8 @@
 
       <table >
 
+        <%= button_to "Delete All", {:controller => :towns, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure?'} %><br>         
+
         <tr>
 
           <th>Delete</th>
@@ -48,6 +50,7 @@
 
 
         </tr>
+        <br>
         
           <% @towns.map do |town| %>
           <tr>   
