--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,9 +62,8 @@
                             <div class="tile is-parent is-vertical"></div>
                             <div class="tile is-parent">
                                 <article class="tile is-child notification is-white">
-                               
 
-                                <% if user_signed_in? %>
+                                <% if user_signed_in? && !@page_with_errors%>
                                     <h3><b>Welcome <%= current_user.username  %>!</b></h3> 
 
                                     <div id="date" class="date_display" >
