--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                                         <li><%= link_to "Age Group Data", user_age_groups_path(current_user) if user_signed_in? %></li>
                                         <li><%= link_to "Gender Data", user_gender_cases_path(current_user) if user_signed_in? %></li>
                                         <li><%= link_to "Etrhnic Group Data", user_ethnic_cases_path(current_user) if user_signed_in? %></li>
-                                        <li><%= link_to "Vaccine Info", vaccines_path(current_user) if user_signed_in? %></li>                                        
+                                        <li><%= link_to "Posts", posts_path if user_signed_in? %></li>                                        
                                         <li><%= link_to "Log Out", destroy_user_session_path, method: :delete if user_signed_in? %></li>
                                     </ul>
 
