--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -42,7 +42,7 @@
 	<% end %>
 
 	<br>
-	<%= link_to "Create New Post", new_user_post_path(current_user) %>
+	<%= link_to "Create New Post", new_post_path(current_user) %>
 	
 	</body>		 
 </html>
