--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,23 +2,50 @@
     <% flash.each do |name, msg| -%>
        <%= content_tag :div, msg, class: name %>
      <% end -%> 
- 	</div><br>
+ 	</div>
 
 	<h3><%= @post.title%></h3>
-	<h3>Posted by: <%= @post.user.username %> on
-	<%= Time.parse(@post.created_at.to_s).localtime.strftime('%A %B %e, %Y %I:%M %p') %></h3>
+	Posted by: <%= @post.user.username %> on
+	<%= Time.parse(@post.created_at.to_s).localtime.strftime('%A %B %e, %Y %I:%M %p') %>
 	
 	<div class="field">
 	  <%= @post.content %>
 	</div>
 
+	   <% num_posts = @post.comments.count - 1 unless @post.comments.count == 0 %> 
+	   <b><%= pluralize(num_posts, "comment") %></b>
+
+       <div class="comments"> 
+	      <% @post.comments.each do |comment| %>
+
+	        <% if !comment.remarks.nil? %>
+	           <p><%= comment.user.username %> commented: <%= time_ago_in_words(comment.created_at) %> ago</p>
+	           <p><%= comment.remarks %><p>
+	        <% end %>
+	        <br>
+	      <% end %>
+       </div>
+    
+
+ 
+ <%= form_for([@post,@post.comments.build]) do |f| %>
+   <div class="field">
+     <%= f.label "comment" %><br />
+     <%= f.text_field :remarks %>
+   </div>
+
+    <div class="action">
+      <%= f.submit %>
+    </div>
+    <% end %>
+	<br>
 
 	<div class="button_position">
-	  <%= button_to "Edit Post", {:controller => :posts, :action => :update, :id => @post.id}, :method => 'patch' %>	 
+	  <%= button_to "Edit Post", {:controller => :posts, :action => :edit, :id => @post.id}, :method => 'get' %>	 
 	  
 	  <span style="width: 10px"></span>
 	  
 	  <%= button_to "Delete Post", {:controller => :posts, :action => :destroy, :id => @post.id}, :method => 'delete' %>
 
-	</div>
+	</div>	
 
