--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,30 +1,37 @@
-	 <div class="alert"> 
-    <% flash.each do |name, msg| -%>
-       <%= content_tag :div, msg, class: name %>
-     <% end -%> 
- 	</div>
 
 	<h3><%= @post.title%></h3>
-	Posted by: <%= @post.user.username %> on
-	<%= Time.parse(@post.created_at.to_s).localtime.strftime('%A %B %e, %Y %I:%M %p') %>
+	<%= @post.user.username %> posted on
+	<%= Time.parse(@post.created_at.to_s).localtime.strftime('%a %B %e, %Y %I:%M %p') %>
 	
 	<div class="field">
 	  <%= @post.content %>
 	</div>
 
-	   <% num_posts = @post.comments.count - 1 unless @post.comments.count == 0 %> 
+	   <% num_posts = @post.comments.count %> 
 	   <b><%= pluralize(num_posts, "comment") %></b>
 
        <div class="comments"> 
 	      <% @post.comments.each do |comment| %>
-
-	        <% if !comment.remarks.nil? %>
+	        <% if !comment.remarks.empty? %>
 	           <p><%= comment.user.username %> commented: <%= time_ago_in_words(comment.created_at) %> ago</p>
 	           <p><%= comment.remarks %><p>
 	        <% end %>
 	        <br>
 	      <% end %>
        </div>
+
+ 
+<% if @comment.errors.any? %>
+  <div id="error_explanation">
+    <h3><%= pluralize(@comment.errors.count, "error") %> prohibited this post from being saved:</h3>
+
+    <ul>
+      <% @comment.errors.full_messages.each do |error| %>
+        <li><%= error %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>      
     
 
  
