--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,20 @@
     
     <%= javascript_include_tag "application" %>
 
+    
+    <style type="text/css">
+
+       table {
+        width: 1200px;
+       }
+
+       th, td {
+        padding: 10px 10px 10px 10px 10px 10px 10px;
+       }       
+
+
+    </style>
+
 
 
   </head>
@@ -46,8 +60,8 @@
                                         <li><%= link_to "Posts", posts_path if user_signed_in? %></li>                                        
                                         <li><%= link_to "Log Out", destroy_user_session_path, method: :delete if user_signed_in? %></li>
                                     </ul>
-
                                             
+
                                         </a>
                                     </span>
                                 </div>
