--- a/app/views/gender_cases/new.html.erb
+++ b/app/views/gender_cases/new.html.erb
@@ -1,21 +1,11 @@
  <%= render "shared/errors" if flash[:alert] %>
 
- <h5>Enter Date Range:</h5>
+ <%= form_tag user_gender_cases_path do %> 
 
- 
-
- <%= form_tag('/user/:user_id/gender_cases') do %> 
-
-  <div><%= label_tag('start_date', "Start Date:")%><%= date_field_tag('start_date') %></div>
-  <div><%= label_tag('end_date', "End Date:")%> <%= date_field_tag('end_date') %></div>
-  <br>
+   <%= render "shared/input_dates" %>
   
- 
-  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>  
-  <br>	
+   <br>	
 
- 
+   <%= submit_tag "Submit" %>
 
- 
-  <%= submit_tag "Submit" %>
 <% end %>
