--- a/app/views/states/new.html.erb
+++ b/app/views/states/new.html.erb
@@ -1,19 +1,11 @@
  <%= render "shared/errors" if flash[:alert] %>
 
- <h5>Enter Date Range:</h5>
+ <%= form_tag user_states_path do %> 
 
+   <%= render "shared/input_dates" %>
 
- <%= form_tag('/user/:user_id/states') do %> 
-
-  <p><%= label_tag('start_date', "Start Date:")%><%= date_field_tag('start_date') %></p>
+   <br>	
  
-  <p><%= label_tag('end_date', "End Date:")%> <%= date_field_tag('end_date') %><p>
+   <%= submit_tag "Submit" %>
 
-  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>  
-  <br>	
-
- 
-
- 
-  <%= submit_tag "Submit" %>
 <% end %>
