--- a/app/views/towns/new.html.erb
+++ b/app/views/towns/new.html.erb
@@ -1,24 +1,14 @@
  <%= render "shared/errors" if flash[:alert] %>
 
- <h5>Enter Date Range:</h5>
+ <%= form_tag user_towns_path do %> 
 
-
- <%= form_tag('/user/:user_id/towns') do %> 
-
-  <div><%= label_tag('start_date', "Start Date:")%><%= date_field_tag('start_date') %></div>
-  <div><%= label_tag('end_date', "End Date:")%> <%= date_field_tag('end_date') %></div>
-  <br>
+   <%= render "shared/input_dates" %>
   
-  <div><%= collection_select :town_lookup_id, TownLookup.all, TownLookup.order(:name), :id, :name, {:prompt => 'Select Town'}, {multiple: true} %>
-  </div>
- 
- 
+   <div><%= collection_select :town_lookup_id, TownLookup.all, TownLookup.order(:name), :id, :name, {:prompt => 'Select Town'}, {multiple: true} %>
+   </div>
 
-  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>  
-  <br>	
+   <br>	
 
- 
+   <%= submit_tag "Submit" %>
 
- 
-  <%= submit_tag "Submit" %>
 <% end %>
