--- a/app/assets/stylesheets/ct-covid-tracker.scss
+++ b/app/assets/stylesheets/ct-covid-tracker.scss
@@ -1,4 +1,3 @@
-@import "bulma";
 
 
 .alert {
@@ -11,6 +10,11 @@
 
 div#error_explanation li{
 	color: red;
+}
+
+.hero-head {
+  text-align: center;
+  font-size: 30px;
 }
 
 h1 {
@@ -42,6 +46,7 @@ a.link-to-text_color {
 
 
 table {
+  width: 1200px;
   border-spacing: 1em .5em;
   padding: 0 2em 1em 0;
   border: 1px solid orange;
@@ -50,6 +55,7 @@ table {
 th {
 
   background: #d2d2d2;
+  padding: 10px 10px 10px 10px 10px 10px 10px;
 	
 }
 
@@ -59,14 +65,19 @@ td {
   background: #d2d2d2;
   text-align: center;
   vertical-align: middle;
+  padding: 10px 10px 10px 10px 10px 10px 10px;
 }
+
 
 .button_position {
   display: flex;
 }
 
+
 .comments {
   text-indent: 5%
 }
+
+
 
 
