--- a/app/views/age_groups/index.html.erb
+++ b/app/views/age_groups/index.html.erb
@@ -30,7 +30,11 @@
 				
 					<% @age_groups.each do |age_group| %>
 					<tr>
-                       <td><%= button_to "Delete", {:controller => :age_groups, :action => :destroy, :id => age_group.id}, :method => 'delete' %></td>								
+					   <td><%= button_to age_group_path(age_group.id), :method => 'delete' do  %> 
+					   	<span style="font-size: 15px; color: Dodgerblue;">
+					   	  <i class="fa fa-trash"></i>
+					   	</span>
+					   	<% end %></td>									
 					   <td> <%= age_group.query_date.strftime('%m/%d/%Y') %></td>
 					   <td><%= age_group.age_group %></td>
              		   <td><%= number_with_delimiter(age_group.confirmed_cases) %> </td>
