--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -32,7 +32,11 @@
 					<% @states.each do |state| %>
 
 					<tr>	
-					   <td><%= button_to "Delete", {:controller => :states, :action => :destroy, :id => state.id}, :method => 'delete' %></td>		
+					   <td><%= button_to state_path(state.id), :method => 'delete' do  %> 
+					   	<span style="font-size: 15px; color: Dodgerblue;">
+					   	  <i class="fa fa-trash"></i>
+					   	</span>
+					   	<% end %></td>		
 					   <td><%= state.query_date.strftime('%m/%d/%Y') %></td>
 					   <td><%= number_with_delimiter(state.total_tests) %></td>
 					   <td><%= state.test_change == 0 ? "**" : state.test_dir %><%= number_with_delimiter(state.test_change) %></td>
