--- a/app/views/towns/index.html.erb
+++ b/app/views/towns/index.html.erb
@@ -32,7 +32,12 @@
         
           <% @towns.map do |town| %>
           <tr>   
-             <td><%= button_to "Delete", {:controller => :towns, :action => :destroy, :id => town.id}, :method => 'delete' %></td>   <td> <%= town.query_date.strftime('%m/%d/%Y') %></td>
+             <td><%= button_to town_path(town.id), :method => 'delete' do  %> 
+              <span style="font-size: 15px; color: Dodgerblue;">
+                <i class="fa fa-trash"></i>
+              </span>
+              <% end %></td>    
+             <td> <%= town.query_date.strftime('%m/%d/%Y') %></td>
              <td><%= town.name %> </td>
              <td><%= number_with_delimiter(town.total_tests)%></td> 
              <td><%= town.test_change == 0 ? "**" : town.test_dir %><%= number_with_delimiter(town.test_change) %></td>
