refactored index pages using a partial to display username and page name

--- a/app/assets/stylesheets/ct-covid-tracker.scss
+++ b/app/assets/stylesheets/ct-covid-tracker.scss
@@ -78,6 +78,17 @@ td {
   text-indent: 5%
 }
 
+.date_display, .time_display {
+  display: inline;
+}
+
+.username, .pagetitle {
+  display: inline;
+  font-size: 18px;
+  color: blue;
+  font-weight: bold;
+}
+
 
 
 
