--- a/app/views/age_groups/index.html.erb
+++ b/app/views/age_groups/index.html.erb
@@ -1,18 +1,15 @@
+	<%= render partial: "shared/pageinfo", locals: {pagetitle: request.original_url.split("/").last.titleize} %>
 
 	<% if current_user.age_groups.empty? %>
-
-	    <h4><%= current_user.username %>,</h4>
 
 	     You have no data saved yet please click the following link to begin your search: <br>
 
 	<% else %>
 
-			<p>Here is a list of your STATEWIDE COVID-19 data by AGE GROUP</p>
-			<br>
-
 			<table>
 
-        	  <%= button_to "Delete All", {:controller => :age_groups, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure?'} %><br> 				
+        	  <%= button_to "Delete All", {:controller => :age_groups, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure?'} %>
+        	  <br> 				
 
 			  <tr>
 
