--- a/app/views/counties/index.html.erb
+++ b/app/views/counties/index.html.erb
@@ -1,14 +1,10 @@
+  <%= render partial: "shared/pageinfo", locals: {pagetitle: request.original_url.split("/").last.titleize} %>
 
   <% if current_user.counties.empty? %>
-
-      <h4><%= current_user.username %>,</h4>
 
        You have no data saved yet please click the following link to begin your search: <br>
 
   <% else %>
-
-      <p>Here is a list of your COUNTYWIDE COVID-19 data by date</p>
-      <br>
 
       <table >
 
