--- a/app/views/towns/index.html.erb
+++ b/app/views/towns/index.html.erb
@@ -1,4 +1,5 @@
-
+  <%= render partial: "shared/pageinfo", locals: {pagetitle: request.original_url.split("/").last.titleize} %>
+  
   <% if current_user.towns.empty? %>
 
       <h4><%= current_user.username %>,</h4>
@@ -6,9 +7,6 @@
        You have no data saved yet please click the following link to begin your search: <br>
 
   <% else %>
-
-      <p>Here is a list of your TOWNWIDE COVID-19 data by date</p>
-      <br>
 
       <table >
 
