--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,18 +1,3 @@
-
-
- <%= form_for @post do |f| %>
-   <div class="field">
-     <%= f.label :title %><br />
-     <%= f.text_field :title %>
-   </div>
-
-   <div class="field">
-     <%= f.label :content %><br />
-     <%= f.text_area :content %>
-   </div>   
-
-    <div class="action">
-      <%= f.submit %>
-    </div>
-
- <% end %>
+  <%= form_for @post do %>
+    <%= render partial: 'form', locals: {post: @post} %>
+  <% end %>
