added before_action method for posts and comments controllers to DRY up code

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-	<%= render partial: "shared/pageinfo", locals: {pagetitle: request.original_url.split("/").last.titleize} %>
+	<%= render partial: "shared/pageinfo", locals: {pagetitle: request.original_url.split("/").last.gsub(/[.0-9]/,"").titleize} %>
 
 	<% if @posts.empty? %>
 
