--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,3 @@
-	<%= render "shared/errors" if flash[:alert] %>
 	
 	<h3><%= @post.title%></h3>
 	<%= @post.user.username %> posted on
@@ -35,7 +34,7 @@
 
 
   <div>
-	  <% if @comment.errors.any? %>
+	  <% if !@comment.nil? && @comment.errors.any? %>
 	    <div id="error_explanation">
 	      <h3><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h3>
 
@@ -50,7 +49,8 @@
   </div>
 
  
-  <%= form_for([@post,@post.comments.build]) do |f| %>
+  <%= form_for([@post, @post.comments.build]) do |f| %>
+
     <div class="field">
        <%= f.label "comment" %><br />
        <%= f.text_field :comment %>
